{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 10,
  "lineage": "09eb0910-af8f-32cc-b023-604d15f5fee7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:loadbalancer/app/DEV-Miomni-ALB/afe19587bb0a0a2c",
            "arn_suffix": "app/DEV-Miomni-ALB/afe19587bb0a0a2c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "DEV-Miomni-ALB-78576240.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:loadbalancer/app/DEV-Miomni-ALB/afe19587bb0a0a2c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "DEV-Miomni-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0310770600941c47e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007208197fc78e2a0"
              },
              {
                "subnet_id": "subnet-0da4e7d4af9b4d9f0"
              }
            ],
            "subnets": [
              "subnet-007208197fc78e2a0",
              "subnet-0da4e7d4af9b4d9f0"
            ],
            "tags": {
              "Name": "DEV-Miomni-ALB"
            },
            "tags_all": {
              "Name": "DEV-Miomni-ALB"
            },
            "vpc_id": "vpc-0138d458294c2378d",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:listener/app/DEV-Miomni-ALB/afe19587bb0a0a2c/6184c74e986400ac",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:listener/app/DEV-Miomni-ALB/afe19587bb0a0a2c/6184c74e986400ac",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:loadbalancer/app/DEV-Miomni-ALB/afe19587bb0a0a2c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:listener/app/DEV-Miomni-ALB/afe19587bb0a0a2c/74d7d9bc11994587",
            "certificate_arn": "arn:aws:acm:eu-west-2:311747045935:certificate/d2244ee2-fcd9-4ef2-ac8f-c539b743373c",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:targetgroup/DEV-BG-WEB/cedc3a3e85d026da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:listener/app/DEV-Miomni-ALB/afe19587bb0a0a2c/74d7d9bc11994587",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:loadbalancer/app/DEV-Miomni-ALB/afe19587bb0a0a2c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.group",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:targetgroup/DEV-BG-WEB/cedc3a3e85d026da",
            "arn_suffix": "targetgroup/DEV-BG-WEB/cedc3a3e85d026da",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:311747045935:targetgroup/DEV-BG-WEB/cedc3a3e85d026da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "DEV-BG-WEB",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0138d458294c2378d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:security-group/sg-0310770600941c47e",
            "description": "Allow external http and https traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0310770600941c47e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DEV-Miomni-ALB-External",
            "name_prefix": "",
            "owner_id": "311747045935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-Miomni-ALB-External"
            },
            "tags_all": {
              "Name": "DEV-Miomni-ALB-External"
            },
            "timeouts": null,
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albinternal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:security-group/sg-0d7535a550535c75c",
            "description": "Allow external http and https traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7535a550535c75c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "DEV-Miomni-ALB-Internal",
            "name_prefix": "",
            "owner_id": "311747045935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DEV-Miomni-ALB-Internal"
            },
            "tags_all": {
              "Name": "DEV-Miomni-ALB-Internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}